--- a/components/panel-channel/index.html
+++ b/components/panel-channel/index.html
@@ -65,7 +65,6 @@
             overflow: auto;
             margin-top: 2vh;
             opacity: 0;
-            text-align: justify;
             -webkit-transform: scale(0.95);
         }
 
@@ -78,7 +77,7 @@
         }
 
         input[type="search"] {
-            width: 100%;
+            width: 37vw;
             padding: 0 10px;
             height: 10vh;
             border:1px solid rgba(100,100,100,0.1);
@@ -88,6 +87,7 @@
 
         input[type="search"]:focus {
             background: rgba(255,255,255,0.8);
+            -webkit-transition: background 0.2s ease-in;
         }
 
         .no-result {
