--- a/components/panel-search/index.html
+++ b/components/panel-search/index.html
@@ -20,7 +20,7 @@
             }
 
             input[type="search"] {
-                width: 100%;
+                width: 37vw;
                 padding: 0 10px;
                 height: 10vh;
                 border:1px solid rgba(100,100,100,0.1);
@@ -30,6 +30,7 @@
 
             input[type="search"]:focus {
                 background: rgba(255,255,255,0.8);
+                -webkit-transition: background 0.2s ease-in;
             }
 		</style>
         <div class="search">
