--- a/components/song-face/index.html
+++ b/components/song-face/index.html
@@ -1,3 +1,4 @@
+<link rel="import" href="../song-lyric/index.html">
 <polymer-element name="song-face" attributes="info">
     <template>
         <style>
@@ -18,6 +19,15 @@
                 top: 0;
                 cursor: pointer;
             }
+
+            song-lyric {
+                width: 50vw;
+                height: 100vh;
+                position: absolute;
+                left: 0;
+                top: 0;
+                pointer-events: none;
+            }
         </style>
         <div id="cssTmpl" style="display: none">
             .bg,.active,body /deep/ .bg { background: %(bg)}
@@ -30,6 +40,7 @@
         <a url="http://music.douban.com{{info.album}}" on-click={{jump2douban}}>
             <img src={{info.picture}} />
         </a>
+        <song-lyric></song-lyric>
     </template>
     <script src="./colibri.js"></script>
     <script>
