--- a/components/x-channel/index.html
+++ b/components/x-channel/index.html
@@ -5,10 +5,10 @@
                 position: relative;
                 height: 20vh;
                 margin: 2vh 1.5vh 2vh 0;
-                cursor: pointer;
                 text-align: left;
                 background: rgba(255,255,255,0.1);
                 box-shadow: 0 0 1px rgba(0,0,0,0.15);
+                cursor: {{channel.cantPlay ? 'not-allowed' : 'pointer'}};
             }
 
             div:hover,div.active {
@@ -89,7 +89,7 @@
                 height: 8vh;
                 line-height: 8vh;
                 width: 17vw;
-                margin: 1.6vh 0 0 0;
+                margin: 0;
                 padding: 0.5vw;
                 background: rgba(255, 255, 255, 0.1);
                 text-align: center;
