--- a/components/panel-search/index.html
+++ b/components/panel-search/index.html
@@ -20,6 +20,7 @@
             }
 
             input[type="search"] {
+                display: block;
                 width: 37vw;
                 padding: 0 10px;
                 height: 10vh;
