--- a/components/x-audio/index.html
+++ b/components/x-audio/index.html
@@ -20,27 +20,31 @@
             }
         </style>
         <audio  autoplay preload>
-            <source src="{{song.url}}" type="audio/mpeg" volume="1.0">
+            <source src="{{song.url}}"  volume="1.0">
             Your browser does not support the audio element.
         </audio>
     </template>
     <script>
         Polymer('x-audio',{
-            song : FM.status.song,
+            song : {},
             ready : function() {
                 var self = this
                 self.player = self.shadowRoot.querySelector('audio')
 
                 FM.obs.on('SONG:UPDATE', function(song) {
                     self.song = song
-                    //加上延迟，防止js执行和html渲染慢导致歌曲src还没有更新就已经重新load了
-                    //TODO 可以考虑使用mountain Observer监测dom的src变化
-                    setTimeout(self.next.bind(self), 200)
                 })
-            },
 
-            next : function() {
-                this.player.load()
+                //监测source标签的src变化，变化后重载播放器
+                var observer = new MutationObserver(function(mutations) {
+                    mutations.forEach(function(mutation) {
+                        if(mutation.type == 'attributes' && mutation.attributeName == 'src') {
+                            self.player.load()
+                        }
+                    });
+                });
+
+                observer.observe(self.player.firstElementChild, { attributes: true})
             }
         })
     </script>
